[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datanarrate"
version = "0.1.0"
description = "Data storytelling engine — turn datasets into natural language narratives"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Officethree Technologies", email = "dev@officethree.com" },
]
keywords = ["data", "storytelling", "narrative", "nlp", "analytics", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
datanarrate = "datanarrate.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datanarrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
